--- a/TP4/client/tsconfig.json
+++ b/TP4/client/tsconfig.json
@@ -18,10 +18,10 @@
         "noUnusedLocals": true,
         "target": "es2015",
         "typeRoots": ["node_modules/@types"],
-        "lib": ["es2018", "dom"]
-    },
+        "lib": ["es2018", "dom"]    },
     "angularCompilerOptions": {
         "fullTemplateTypeCheck": true,
         "strictInjectionParameters": true
     }
 }
+
