--- a/TP4/client/package.json
+++ b/TP4/client/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~8.1.2",
     "@types/jest": "^25.1.5",
     "hammerjs": "^2.0.8",
+    "mat-video": "^2.8.0",
     "prettier": "^1.19.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
